webkube/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webkube
  labels:
    app: webkube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webkube
  template:
    metadata:
      name: webkube
      labels:
        app: webkube
    spec:
      containers:
        - name: webkube
          image: webkube
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webkube-service
spec:
  selector:
    app: webkube
  ports:
    - port: 8080
      targetPort: 8080
