webkube/web-inc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webkube-inc
  labels:
    app: webkube-inc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webkube-inc
  template:
    metadata:
      name: webkube-inc
      labels:
        app: webkube-inc
    spec:
      containers:
        - name: webkube-inc
          image: webkube-inc
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webkube-inc-service
spec:
  selector:
    app: webkube-inc
  ports:
    - port: 8080
      targetPort: 8080
