webkube/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webkube
                port:
                  number: 8080
          - path: /inc
            pathType: Prefix
            backend:
              service:
                name: webkube-inc
                port:
                  number: 8080
